# galroon

./: .gitignore  CHANGELOG.md  GALROON_BLUEPRINT.md  QUICKSTART.md  README.md  V0.2.0_VIEW_FIX_REPORT.md  VERSION_HISTORY.md  build_portable.bat  build_portable.sh  claude.md  cleanup_for_repo.ps1  dev.bat  gemini_review.txt  index.html  package-lock.json  package.json  pytest.ini  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: enrich_workspace.rs  probe_candidates.rs
src-tauri/migrations/: 001_works.sql  002_tags.sql  003_characters.sql  004_jobs.sql  005_fts.sql  006_assets.sql  007_work_texts.sql  008_dual_tags.sql  009_collections.sql  010_completion.sql  011_enrichment_mappings.sql  012_canonical_works.sql  013_work_persistence.sql  014_field_preferences.sql  015_workshop_diagnostics.sql  016_provider_rules_and_asset_groups.sql  017_app_jobs.sql
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/api/: brands.rs  characters.rs  collections.rs  dashboard.rs  duplicates.rs  enrichment.rs  extended.rs  import.rs  jobs.rs  mod.rs  posters.rs  scanner.rs  search.rs  settings.rs  tags.rs  thumbnails.rs  works.rs  workshop.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/domain/: asset.rs  character.rs  error.rs  ids.rs  metadata.rs  mod.rs  person.rs  tag.rs  work.rs
src-tauri/src/enrichment/: bangumi.rs  cache.rs  dlsite.rs  matcher.rs  mod.rs  people.rs  provider.rs  query.rs  queue.rs  rate_limit.rs  resolver.rs  search.rs  vndb.rs
src-tauri/src/fs/: asset.rs  metadata_io.rs  mod.rs  trash.rs  (+1 more)
(+370 files in other folders)
